startups/enfants-du-spectacle/raw/clusters/ovh-prod/allow-namespace-metabase-access.netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-namespace-metabase-access
  namespace: enfants-du-spectacle
spec:
  policyTypes:
  - Ingress
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: startup-enfants-du-spectacle--metabase-prod
